# do_x3dna

./: .dockerignore  .gitignore  .nojekyll  .readthedocs.yaml  CMakeLists.txt  Dockerfile  Dockerfile.static  README.md  README.rst  apidoc.html  backbone_torsion_wheel_tutorial.html  base_pairs_tutorial.html  base_steps_tutorial.html  code.html  genindex.html  helical_axis_tutorial.html  helical_steps_tutorial.html  index.html  install.html  intro.html  major_minor_groove_tutorial.html  objects.inv  params.json  py-modindex.html  search.html  searchindex.js  toc.html  tutorial.html  usage.html
.devcontainer/: devcontainer.json
.github/workflows/: static-build.yml
Python_API/: dnaMD.py  dna_main.py
_sources/: apidoc.txt  backbone_torsion_wheel_tutorial.txt  base_pairs_tutorial.txt  base_steps_tutorial.txt  code.txt  helical_axis_tutorial.txt  helical_steps_tutorial.txt  index.txt  install.txt  intro.txt  major_minor_groove_tutorial.txt  toc.txt  tutorial.txt  usage.txt
_static/: agogo.css  basic.css
cmake/: FindGROMACS.cmake
dnaMD/: README.rst  pyproject.toml  setup.py
dnaMD/dnaMD/: __init__.py  dnaEY.py  dnaMD.py  main.py
dnaMD/dnaMD/commands/: axisCurv.py  curvature.py  globalElasticity.py  globalEnergy.py  histogram.py  localDeformation.py  localElasticity.py  localEnergy.py  saveAsH5.py  test.py  vsBPS.py  vsTime.py
docs/: Makefile  about_dna_elasticity.rst  api_summary.rst  conf.py  dnaEY_api.rst  dnaMD_api.rst  dnaMD_usage.rst  dna_class_api.rst  do_x3dna_usage.rst  global_elasticity.ipynb  index.rst  install_dnaMD.rst  install_do_x3dna.rst  make.bat  requirements.txt  tutorial.rst  using_hdf5.rst  vmd_plugin.rst
docs/_templates/: layout.html
docs/commands/: axisCurv.rst  globalElasticity.rst  globalEnergy.rst  histogram.rst  localDeformation.rst  localElasticity.rst  localEnergy.rst  saveAsH5.rst  vsBPS.rst  vsTime.rst
docs/notebooks/: backbone_torsion_wheel_tutorial.ipynb  base_pairs_tutorial.ipynb  base_steps_tutorial.ipynb  calculate_elasticity_tutorial.ipynb  hdf5_tutorial.ipynb  helical_axis_tutorial.ipynb  helical_steps_tutorial.ipynb  major_minor_groove_tutorial.ipynb
scripts/: build_gromacs.sh  build_static_gromacs.sh
src/: CMakeLists.txt  ExtractData.c  ExtractData.cpp  ExtractData.h  do_x3dna.c  do_x3dna.cpp  do_x3dna.h
src/GMX2016/: do_x3dna.cpp  do_x3dna.h
src/GMX46/: do_x3dna.c  do_x3dna.h
src/GMX50/: do_x3dna.c  do_x3dna.h
src/GMX51/: do_x3dna.c
tut_notebook/: backbone_torsion_wheel_tutorial.ipynb  base_pairs_tutorial.ipynb  base_steps_tutorial.ipynb  calculate_elasticity_tutorial.ipynb  helical_axis_tutorial.ipynb  helical_steps_tutorial.ipynb  major_minor_groove_tutorial.ipynb
vmd/do_x3dna/: do_x3dna.tcl  pkgIndex.tcl
vmd/examples/: ex-1.tcl
